survey-celery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /usr/bin/kompose convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: survey-celery
  name: survey-celery
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: survey-celery
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /usr/bin/kompose convert
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/opt-default: "true"
        io.kompose.service: survey-celery
    spec:
      containers:
        - args:
            - celery
            - -A
            - app_survey
            - worker
            - --queues
            - surveys,stats
            - --loglevel
            - INFO
          image: 363806660710.dkr.ecr.ap-southeast-1.amazonaws.com/rpp-prod-mainapp:1.1 
          name: survey-celery
          resources: {}
          volumeMounts:
            - mountPath: /srv/survey
              name: survey-celery-claim0
      restartPolicy: Always
      volumes:
        - name: survey-celery-claim0
          persistentVolumeClaim:
            claimName: survey-celery-claim0
status: {}
