survey-django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /usr/bin/kompose convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: survey-django
  name: survey-django
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: survey-django
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /usr/bin/kompose convert
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/opt-default: "true"
        io.kompose.service: survey-django
    spec:
      containers:
        - args:
            - /start.sh
          image: survey_django
          name: survey-django
          ports:
            - containerPort: 8000
              hostPort: 8000
              protocol: TCP
          resources: {}
          stdin: true
          tty: true
          volumeMounts:
            - mountPath: /srv/survey
              name: survey-django-claim0
            - mountPath: /etc/supervisor/conf.d
              name: survey-django-claim1
            - mountPath: /var/log
              name: survey-django-claim2
      restartPolicy: Always
      volumes:
        - name: survey-django-claim0
          persistentVolumeClaim:
            claimName: survey-django-claim0
        - name: survey-django-claim1
          persistentVolumeClaim:
            claimName: survey-django-claim1
        - name: survey-django-claim2
          persistentVolumeClaim:
            claimName: survey-django-claim2
status: {}
