survey-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /usr/bin/kompose convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: survey-mysql
  name: survey-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: survey-mysql
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /usr/bin/kompose convert
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/opt-default: "true"
        io.kompose.service: survey-mysql
    spec:
      containers:
        - env:
            - name: APP_SECRET_KEY
              valueFrom:
                configMapKeyRef:
                  key: APP_SECRET_KEY
                  name: opt-enviroments-development-env
            - name: MYSQL_DATABASE
              valueFrom:
                configMapKeyRef:
                  key: MYSQL_DATABASE
                  name: opt-enviroments-development-env
            - name: MYSQL_LOCAL_HOST
              valueFrom:
                configMapKeyRef:
                  key: MYSQL_LOCAL_HOST
                  name: opt-enviroments-development-env
            - name: MYSQL_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: MYSQL_PASSWORD
                  name: opt-enviroments-development-env
            - name: MYSQL_PORT
              valueFrom:
                configMapKeyRef:
                  key: MYSQL_PORT
                  name: opt-enviroments-development-env
            - name: MYSQL_ROOT_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: MYSQL_ROOT_PASSWORD
                  name: opt-enviroments-development-env
            - name: MYSQL_USER
              valueFrom:
                configMapKeyRef:
                  key: MYSQL_USER
                  name: opt-enviroments-development-env
            - name: RABBITMQ_DEFAULT_PASS
              valueFrom:
                configMapKeyRef:
                  key: RABBITMQ_DEFAULT_PASS
                  name: opt-enviroments-development-env
            - name: RABBITMQ_DEFAULT_PORT
              valueFrom:
                configMapKeyRef:
                  key: RABBITMQ_DEFAULT_PORT
                  name: opt-enviroments-development-env
            - name: RABBITMQ_DEFAULT_USER
              valueFrom:
                configMapKeyRef:
                  key: RABBITMQ_DEFAULT_USER
                  name: opt-enviroments-development-env
            - name: RABBITMQ_DEFAULT_VHOST
              valueFrom:
                configMapKeyRef:
                  key: RABBITMQ_DEFAULT_VHOST
                  name: opt-enviroments-development-env
            - name: RABBITMQ_HOST
              valueFrom:
                configMapKeyRef:
                  key: RABBITMQ_HOST
                  name: opt-enviroments-development-env
            - name: REDIS_DB
              valueFrom:
                configMapKeyRef:
                  key: REDIS_DB
                  name: opt-enviroments-development-env
            - name: REDIS_HOST
              valueFrom:
                configMapKeyRef:
                  key: REDIS_HOST
                  name: opt-enviroments-development-env
            - name: REDIS_PORT
              valueFrom:
                configMapKeyRef:
                  key: REDIS_PORT
                  name: opt-enviroments-development-env
          image: mysql:5.7
          name: survey-mysql
          ports:
            - containerPort: 3306
              hostPort: 3306
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
