survey-rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /usr/bin/kompose convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: survey-rabbitmq
  name: survey-rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: survey-rabbitmq
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /usr/bin/kompose convert
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/opt-default: "true"
        io.kompose.service: survey-rabbitmq
    spec:
      containers:
        - env:
            - name: APP_SECRET_KEY
              valueFrom:
                configMapKeyRef:
                  key: APP_SECRET_KEY
                  name: opt-enviroments-development-env
            - name: MYSQL_DATABASE
              valueFrom:
                configMapKeyRef:
                  key: MYSQL_DATABASE
                  name: opt-enviroments-development-env
            - name: MYSQL_LOCAL_HOST
              valueFrom:
                configMapKeyRef:
                  key: MYSQL_LOCAL_HOST
                  name: opt-enviroments-development-env
            - name: MYSQL_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: MYSQL_PASSWORD
                  name: opt-enviroments-development-env
            - name: MYSQL_PORT
              valueFrom:
                configMapKeyRef:
                  key: MYSQL_PORT
                  name: opt-enviroments-development-env
            - name: MYSQL_ROOT_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: MYSQL_ROOT_PASSWORD
                  name: opt-enviroments-development-env
            - name: MYSQL_USER
              valueFrom:
                configMapKeyRef:
                  key: MYSQL_USER
                  name: opt-enviroments-development-env
            - name: RABBITMQ_DEFAULT_PASS
              valueFrom:
                configMapKeyRef:
                  key: RABBITMQ_DEFAULT_PASS
                  name: opt-enviroments-development-env
            - name: RABBITMQ_DEFAULT_PORT
              valueFrom:
                configMapKeyRef:
                  key: RABBITMQ_DEFAULT_PORT
                  name: opt-enviroments-development-env
            - name: RABBITMQ_DEFAULT_USER
              valueFrom:
                configMapKeyRef:
                  key: RABBITMQ_DEFAULT_USER
                  name: opt-enviroments-development-env
            - name: RABBITMQ_DEFAULT_VHOST
              valueFrom:
                configMapKeyRef:
                  key: RABBITMQ_DEFAULT_VHOST
                  name: opt-enviroments-development-env
            - name: RABBITMQ_HOST
              valueFrom:
                configMapKeyRef:
                  key: RABBITMQ_HOST
                  name: opt-enviroments-development-env
            - name: REDIS_DB
              valueFrom:
                configMapKeyRef:
                  key: REDIS_DB
                  name: opt-enviroments-development-env
            - name: REDIS_HOST
              valueFrom:
                configMapKeyRef:
                  key: REDIS_HOST
                  name: opt-enviroments-development-env
            - name: REDIS_PORT
              valueFrom:
                configMapKeyRef:
                  key: REDIS_PORT
                  name: opt-enviroments-development-env
          image: rabbitmq:3.7.8 
          name: survey-rabbitmq
          ports:
            - containerPort: 5672
              hostPort: 5672
              protocol: TCP
            - containerPort: 15672
              hostPort: 15672
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/rabbitmq/watch-rabbitmq.sh
              name: survey-rabbitmq-claim0
      restartPolicy: Always
      volumes:
        - name: survey-rabbitmq-claim0
          persistentVolumeClaim:
            claimName: survey-rabbitmq-claim0
status: {}
