survey-django-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /usr/bin/kompose convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: survey-django
  name: survey-django
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
  selector:
    io.kompose.service: survey-django
status:
  loadBalancer: {}
