survey-rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /usr/bin/kompose convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: survey-rabbitmq
  name: survey-rabbitmq
spec:
  ports:
    - name: "5672"
      port: 5672
      targetPort: 5672
    - name: "15672"
      port: 15672
      targetPort: 15672
  selector:
    io.kompose.service: survey-rabbitmq
status:
  loadBalancer: {}
